deprecated/compiler/tests/compile_pass/region_dereference_field.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

struct foo
{
  x: int,
}

task read_write(r: region<foo>, p: foo@r): int
  , reads(r), writes(r)
{
  let x: int = (*p).x;
  p->x = p->x + x + 1;
  return x;
}

task read_only(r: region<foo>, p: foo@r): int
  , reads(r)
{
  let x: int = (*p).x;
  return p->x + x + 1;
}

task write_only(r: region<foo>, p: foo@r)
  , writes(r)
{
  (*p).x = 1;
  p->x = 2;
}

task main() {}
